Updated image of Angel

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>In Memory of Angel</h1>
       <p><i>The best dog anyone could ask for</i></p>
     </div>
-    <img class="img-responsive" src="https://goo.gl/MgA4Nl" id=headshot>
+    <img class="img-responsive" src="images/angel-headshot.jpg" id=headshot>
     <div class="listSection">
       <h3 class="text-center">Here's a timeline of Angel's life</h3>
       <div class="col-sm-8 col-sm-offset-2">
