--- a/index.html
+++ b/index.html
@@ -9,24 +9,30 @@
 
 
 <body>
-	<div class="container" id=infoContainer>
-		<div class="text-center">
-			<h1>In Memory of Angel</h1>
-			<p><i>The best dog anyone could ask for</i></p>
-		</div>
-	<img class="img-responsive" src="images/angel-headshot.jpg" id=headshot>
-		<div class="listSection">
-		  <h3 class="text-center">Here's a timeline of Angel's life</h3>
-			<div class="col-sm-8 col-sm-offset-2">
-				<ul>
-				  <li>2002 - Angel is adopted from the Seattle Humane Society</li>
-				  ...Assorted other activities...
-				  <li>12/28/2015 - Angel dies surrounded by her whole family</li>
-				  <br>
-				</ul>
-				<p class="quote">"Angel was a great dog"</p>
-				<p><i>-her family</i></p>
-				<h3>If you'd like to find out more, you can read about her <a href="#">here</a></h3>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2" id=infoContainer>
+				<div class="text-center">
+					<h1>In Memory of Angel</h1>
+					<p><i>The best dog anyone could ask for</i></p>
+				</div>
+				<img class="img-responsive" src="images/angel-headshot.jpg" id=headshot>
+				<div class="row">
+					<h3 class="text-center">Here's a timeline of Angel's life</h3>
+					<div class="col-sm-6 col-sm-offset-3">
+						<ul>
+							<li>2002 - Angel is adopted from the Seattle Humane Society</li>
+							...Assorted other activities...
+							<li>12/28/2015 - Angel dies surrounded by her whole family</li>
+							<br>
+						</ul>
+						<div>
+							<p class="quote text-center">Angel was a great dog"</p>
+							<p class="text-right"><i>-her family</i></p>
+							<h3 class="text-center">If you'd like to find out more, you can read about her <a href="#">here</a></h3>
+						<div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
